--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "version": "1.3.0",
-    "Descripcion": "Se agregaron nuevos telefonos al servidor"
+    "message": "Se agregaron nuevos telefonos al servidor"
 }
